kubernetes/apps/teamcity/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teamcity
  labels:
    toolkit.fluxcd.io/tenant: dev-team
