kubernetes/apps/teamcity/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teamcity-server
  namespace: teamcity
  labels:
    app.kubernetes.io/name: teamcity-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8111
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: teamcity-server
